--- a/about.html
+++ b/about.html
@@ -13,13 +13,15 @@
             text-align: center;
      
         }
+        body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
-        footer .footer-section {
-            display: inline-block;
-            vertical-align: top;
-            margin: 0 20px;
-            text-align: left;
-        }
+footer {
+    margin-top: auto;  
+}
 
         footer .footer-section h4 {
             font-weight: bold;
@@ -64,7 +66,7 @@
         <h1>Ford Company</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="pages/about">About</a>
             <a href="products.html">Products</a>
             <a href="contact.html">Contact</a>
             <div class="hamburger" id="hamburger">
