--- a/pages/ABOUT/about.html
+++ b/pages/ABOUT/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Ford</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/pages/CSS/style.css">
     <style>
         footer {
             background-color: #060920;
@@ -38,7 +38,7 @@ footer {
         }
 
         .yellow-bg-darkblue-text {
-            background-color: rgb(255, 218, 8);
+            background-color: #ffda08;
             color: darkblue;
             border-radius: 10px;
             padding: 10px;
@@ -46,7 +46,7 @@ footer {
         }
 
         .yellow-bg-darkblue-text:hover {
-            background-color: darkblue;
+            background-color: #00008b;
             color: white;
         }
 
@@ -65,10 +65,10 @@ footer {
     <header>
         <h1>Ford Company</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="pages/about">About</a>
-            <a href="products.html">Products</a>
-            <a href="contact.html">Contact</a>
+            <a href="/pages/HOME/index.html">Home</a>
+            <a href="/pages/ABOUT/about.html">About</a>
+            <a href="/pages/PRODUCT/products.html">Products</a>
+            <a href="/pages/CONTACT/assets/">Contact</a>
             <div class="hamburger" id="hamburger">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -79,10 +79,10 @@ footer {
 
     <div class="side-menu" id="side-menu">
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/pages/HOME/index.html">Home</a></li>
+            <li><a href="/pages/ABOUT/about.html">About</a></li>
+            <li><a href="/pages/PRODUCT/products.html">Products</a></li>
+            <li><a href="/pages/CONTACT/contact.html">Contact</a></li>
         </ul>
     </div>
 
@@ -92,12 +92,12 @@ footer {
                 <h2>About Us</h2>
                 <p>Ford Company has been innovating the automobile industry since its inception. We build cars that inspire confidence and fuel your passion for driving. With cutting-edge technology, exceptional performance, and stylish designs, Ford continues to lead the way in transforming the future of driving.</p>
                 <p>Whether you're looking for a powerful sports car, an eco-friendly hybrid, or a family-friendly SUV, Ford offers a range of vehicles that suit every lifestyle. Experience the power, performance, and passion that only Ford can deliver.</p>
-                <a href="products.html">
+                <a href="/pages/PRODUCT/products.html">
                     <button class="cta-button">Explore Our Products</button>
                 </a>
             </div>
             <div class="about-image">
-                <img src="assets/img/abt1.jpg" alt="Ford Cars">
+                <img src="/pages/ABOUT/assets/img/abt1.jpg" alt="Ford Cars">
             </div>
         </div>
     </main>
@@ -114,7 +114,7 @@ footer {
         <div class="footer-section">
             <h4>Request a Quote</h4>
             <p class="yellow-bg-darkblue-text">
-                <a href="contact.html">See pricing from your local dealer</a>
+                <a href="/pages/CONTACT/">See pricing from your local dealer</a>
             </p>
         </div>
         <div class="footer-section">
@@ -127,6 +127,6 @@ footer {
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
