--- a/pages/HOME/index.html
+++ b/pages/HOME/index.html
@@ -173,6 +173,6 @@
         </div>
     </footer>
 
-    <script src="/pages/HOME/script.js"></script> 
+    <script src="/assets/js/script.js"></script> 
 </body>
 </html>
