--- a/pages/PRODUCT/FORD MUSTANG/FORD MUSTANG.html
+++ b/pages/PRODUCT/FORD MUSTANG/FORD MUSTANG.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ford Mustang - Product Details </title>
-    <link rel="stylesheet" href="/pages/CSS/style.css">
+    <link rel="stylesheet" href="/style.css">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FORD MUSTANG</title>
-        <link rel="stylesheet" href="/pages/CSS/style.css">
+        <link rel="stylesheet" href="/style.css">
         <style>
             /* Footer Styling */
             footer {
